[package]
name = "readybunnygo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.12.0", features = [
    "dynamic_linking",
    "bevy_text",
    "bevy_ui",
    "bevy_asset",
    "bevy_render",
    ] }
rand = "0.8"
bevy_tweening = "0.9"
bevy_screen_diagnostics = "0.4.0"

[dev-dependencies]
bevy = { version = "0.12", default-features = true }

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
